assets/src/components/routes/App/App.css
:root {
	--bg-primary: var(--sl-color-neutral-0);
	--bg-gray: #fcfbfe;
	--bg-dark: var(--sl-color-neutral-950);
	--bg-crystal: hsl(0deg 0% 98% / 50%);
	--bg-transparent: #ffffff10;
	--bg-editor: #1e1e1e;
	--bg-overlay: #17171747;
	--text-primary: var(--sl-color-neutral-900);
	--text-onaccent: var(--sl-color-neutral-0);
	--text-gray: var(--sl-color-neutral-400);
	--text-light: #616161;
	--border-primary: #e6e6e6;
	--radius: 5px;
	--header-height: 56px;
	--system-fonts:
		-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Noto Sans', Helvetica, Arial, sans-serif, 'Apple Color Emoji',
		'Segoe UI Emoji';
	--monospace-fonts: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace;

	/* set shoelace primary colors */
	--sl-color-primary-50: #e3e4f7 !important;
	--sl-color-primary-100: #d0d0f1 !important;
	--sl-color-primary-200: #b8b9ea !important;
	--sl-color-primary-300: #999ae1 !important;
	--sl-color-primary-400: #8183da !important;
	--sl-color-primary-500: #696bd3 !important;
	--sl-color-primary-600: #6062d0 !important;
	--sl-color-primary-700: #4244c7 !important;
	--sl-color-primary-800: #3437b1 !important;
	--sl-color-primary-900: #2a2c8e !important;
	--sl-color-primary-950: #21226e !important;

	/* assign shoelace primary colors */
	--color-primary-50: var(--sl-color-primary-50);
	--color-primary-100: var(--sl-color-primary-100);
	--color-primary-200: var(--sl-color-primary-200);
	--color-primary-300: var(--sl-color-primary-300);
	--color-primary-400: var(--sl-color-primary-400);
	--color-primary-500: var(--sl-color-primary-500);
	--color-primary-600: var(--sl-color-primary-600);
	--color-primary-700: var(--sl-color-primary-700);
	--color-primary-800: var(--sl-color-primary-800);
	--color-primary-900: var(--sl-color-primary-900);
	--color-primary-950: var(--sl-color-primary-950);

	--sl-input-color: var(--text-light) !important;

	background-color: var(--bg-primary);
}

html,
body,
#root,
.app {
	height: 100% !important;
	scroll-behavior: smooth;
}

*,
*::before,
*::after,
*::placeholder {
	font-family: var(--system-fonts);
	box-sizing: border-box;
	outline-color: var(--color-primary-500);
}

*::part(base),
*::part(display-input) {
	font-family: var(--system-fonts);
}

div,
p,
span,
a,
code {
	line-height: 1.5;
}

button {
	line-height: normal;
}

h1,
h1,
h3,
h4,
h5,
h6 {
	font-family: var(--system-fonts);
	font-weight: 400;
}

a {
	text-decoration: none;
	color: inherit;
}

b {
	font-weight: 600;
}

h1 {
	font-size: 25px;
}

p {
	margin: 0;
}

code {
	font-family: var(--monospace-fonts);
}

img,
picture,
video,
canvas,
svg {
	display: block;
	max-width: 100%;
	height: auto;
}

body {
	margin: 0;
	padding: 0;
}

#root > .app {
	padding-top: var(--header-height);
	padding-left: var(--sidebar-width);
}

/* || buttons and links */

sl-button {
	position: relative;
}

sl-button[variant='default']::part(base) {
	background-color: var(--bg-gray);
}

sl-button[variant='text']::part(base) {
	font-weight: 600;
}

sl-button[variant='text']::part(label) {
	padding-right: 10px;
}

sl-button[variant='text'] sl-icon {
	color: var(--sl-color-primary-600);
}

sl-button[disabled]::part(base) {
	cursor: default;
}

sl-button > a {
	position: absolute;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;
}

.button--standard.button--primary:hover:not(.button--disabled) {
	background-color: #4049c6 !important;
	border-color: #4049c6 !important;
}

sl-alert[variant='primary'] > *,
sl-alert[variant='neutral'] > *,
sl-alert[variant='danger'] > *,
sl-alert[variant='success'] > *,
sl-alert[variant='warning'] > * {
	color: var(--text-onaccent);
}

sl-alert::part(base) {
	color: var(--text-onaccent);
	font-weight: 600;
}

sl-alert[variant='neutral']::part(base) {
	background-color: var(--sl-color-neutral-600);
}

sl-alert[variant='primary']::part(base) {
	background-color: var(--sl-color-primary-600);
}

sl-alert[variant='success']::part(base) {
	background-color: var(--sl-color-success-600);
}

sl-alert[variant='danger']::part(base) {
	background-color: var(--sl-color-danger-600);
}

sl-alert[variant='warning']::part(base) {
	background-color: var(--sl-color-warning-600);
}

sl-breadcrumb-item {
	position: relative;
}

sl-breadcrumb-item > a {
	position: absolute;
	left: 0;
	top: 0;
	width: calc(100% - 14px);
	height: 100%;
}

sl-menu-item::part(base) {
	padding-top: 5px;
	padding-bottom: 5px;
}

sl-menu-item:focus-visible::part(base) {
	color: var(--text-onaccent) !important;
}

sl-menu-item:focus-visible * {
	color: var(--text-onaccent) !important;
}

sl-menu-item:hover::part(base) {
	background-color: var(--sl-color-neutral-200);
}

sl-switch[checked]::part(control) {
	background-color: var(--sl-color-success-600) !important;
	border-color: var(--sl-color-success-600) !important;
}

sl-switch[checked]::part(thumb) {
	border-color: var(--sl-color-success-600) !important;
}

sl-drawer[placement='bottom']::part(panel) {
	padding: 20px 30px 10px 30px;
}

/* TODO: why this doesn't work? */

input::placeholder,
sl-input::part(input)::placeholder,
sl-textarea::part(textarea)::placeholder {
	color: var(--sl-color-neutral-400);
	font-weight: 100;
}

/* || Forms */

sl-select::part(control) {
	min-width: 150px;
}

::part(form-control-label) {
	color: var(--text-light);
	padding-bottom: 4px;
	margin-left: 1px;
}

sl-switch::part(label) {
	color: var(--text-light);
}

sl-checkbox::part(form-control-help-text) {
	font-size: 12px;
}

/* || Panels */

sl-dialog::part(panel) {
	border-radius: 5px;
}

sl-dialog::part(base) {
	padding-left: var(--sidebar-width);
}

sl-dialog.fullscreen::part(base),
.root-error sl-dialog::part(base) {
	padding-left: 0;
}

sl-dialog::part(title) {
	font-weight: 500;
}

sl-dialog::part(body) {
	padding-top: 0px;
}

/* || Content */

.app .route-content {
	padding: 24px;
	padding-bottom: 50px;
	background-color: var(--bg-gray);
	border-top-left-radius: 8px;
	border: 1px solid #ececec;
	min-height: calc(100vh - var(--header-height));
}

.app .route-content--connection {
	min-height: calc(100vh - 140px);
	border-radius: 0;
	border-color: #f9e3fe;
}

/* || Tab panels */

sl-tab-group::part(body) {
	overflow: visible;
}

/* || Split panels */

sl-split-panel {
	--divider-width: 2px;
}

sl-split-panel::part(divider) {
	background-color: var(--border-primary);
	z-index: 20;
}

sl-split-panel sl-icon[slot='divider'] {
	position: absolute;
	border-radius: 5px;
	background: var(--bg-primary);
	color: var(--sl-color-neutral-500);
	padding: 0.5rem 0.125rem;
	border: 1px solid var(--border-primary);
}

/* || App spinner */

.app-spinner {
	position: absolute;
	left: 50%;
	top: 50%;
	transform: translate(-50%, calc(-50% - 100px));
}

/* || Animations */

@keyframes fade-in-entrance {
	0% {
		opacity: 0;
	}
	100% {
		opacity: 1;
	}
}

/* || Date range picker */

.rdrDateRangePickerWrapper .rdrStaticRangeSelected,
.rdrDateRangePickerWrapper .rdrStartEdge,
.rdrDateRangePickerWrapper .rdrInRange,
.rdrDateRangePickerWrapper .rdrEndEdge,
.rdrDateRangePickerWrapper .rdrDateDisplay,
.rdrDateRangeWrapper .rdrStaticRangeSelected,
.rdrDateRangeWrapper .rdrStartEdge,
.rdrDateRangeWrapper .rdrInRange,
.rdrDateRangeWrapper .rdrEndEdge,
.rdrDateRangeWrapper .rdrDateDisplay {
	color: var(--sl-color-primary-600) !important;
}

.rdrDateRangePickerWrapper .rdrDayToday .rdrDayNumber span:after,
.rdrDateRangeWrapper .rdrDayToday .rdrDayNumber span:after {
	background-color: var(--sl-color-primary-600) !important;
}

/* schema combobox items */

.combobox-list sl-menu-item::part(checked-icon) {
	display: none;
}

.schema-combobox-item {
	display: flex;
	align-items: start;
	gap: 0;
}

.schema-combobox-item__type {
	width: 42px;
	display: flex;
	justify-content: center;
	align-items: center;
}

.schema-combobox-item__text {
	font-size: 13px;
}

.schema-combobox-item__name {
	opacity: 0.8;
	font-family: var(--monospace-fonts);
}

